--- a/esphome/light-638a.yaml
+++ b/esphome/light-638a.yaml
@@ -4,6 +4,7 @@ substitutions:
 esphome:
   name: ${device_name}
   friendly_name: ${device_name}
+  min_version: 2024.7.0
   on_boot:
     priority: 900
     then:
