--- a/esphome/switch-a391.yaml
+++ b/esphome/switch-a391.yaml
@@ -4,6 +4,7 @@ substitutions:
 esphome:
   name: ${device_name}
   friendly_name: ${device_name}
+  min_version: 2024.7.0
 
 esp8266:
   board: esp01_1m
