--- a/scenes.yaml
+++ b/scenes.yaml
@@ -1,27 +1,27 @@
-- id: '1722028640258'
-  name: Desk occupied
+- id: '1723184902304'
+  name: Living Room Desk Reading Light Default
   entities:
     light.living_room_desk_reading_light:
       min_color_temp_kelvin: 2000
-      max_color_temp_kelvin: 6535
-      min_mireds: 153
+      max_color_temp_kelvin: 5000
+      min_mireds: 200
       max_mireds: 500
       supported_color_modes:
       - color_temp
       color_mode: color_temp
-      brightness: 76
-      color_temp_kelvin: 2808
-      color_temp: 356
+      brightness: 102
+      color_temp_kelvin: 2500
+      color_temp: 400
       hs_color:
-      - 28.172
-      - 62.378
+      - 28.874
+      - 72.522
       rgb_color:
       - 255
-      - 170
-      - 95
+      - 159
+      - 70
       xy_color:
-      - 0.516
-      - 0.386
+      - 0.546
+      - 0.389
       entity_id:
       - light.light_2a1e_light
       icon: mdi:lightbulb-group
@@ -31,62 +31,148 @@
   metadata:
     light.living_room_desk_reading_light:
       entity_only: true
-- id: '1722028671424'
-  name: Desk unoccupied
+- id: '1723203633955'
+  name: Kitchen Lights Default
   entities:
-    light.living_room_desk_reading_light:
+    light.kitchen_lights:
+      supported_color_modes:
+      - onoff
+      color_mode: onoff
+      entity_id:
+      - light.light_b55c_light_1
+      icon: mdi:lightbulb-group
+      friendly_name: Kitchen Lights
+      supported_features: 0
+      state: 'on'
+  metadata:
+    light.kitchen_lights:
+      entity_only: true
+- id: '1723205417936'
+  name: Hallway Lights Default
+  entities:
+    light.hallway_lights:
+      supported_color_modes:
+      - onoff
+      color_mode: onoff
+      icon: mdi:lightbulb
+      friendly_name: Hallway Lights
+      supported_features: 0
+      state: 'on'
+  metadata:
+    light.hallway_lights:
+      entity_only: true
+- id: '1723206199458'
+  name: Living Room Decorative Lights Default
+  entities:
+    light.living_room_sofa_windowsill_light:
+      supported_color_modes:
+      - onoff
+      color_mode: onoff
+      friendly_name: Living Room Sofa Windowsill Light
+      supported_features: 0
+      state: 'on'
+    light.living_room_desk_windowsill_light:
       min_color_temp_kelvin: 2000
-      max_color_temp_kelvin: 6535
-      min_mireds: 153
+      max_color_temp_kelvin: 5000
+      min_mireds: 200
       max_mireds: 500
       supported_color_modes:
       - color_temp
       color_mode: color_temp
-      brightness: 25
-      color_temp_kelvin: 2212
-      color_temp: 452
+      brightness: 3
+      color_temp_kelvin: 2000
+      color_temp: 500
       hs_color:
-      - 29.754
-      - 84.103
+      - 30.601
+      - 94.547
       rgb_color:
       - 255
-      - 146
-      - 40
+      - 136
+      - 13
       xy_color:
-      - 0.579
-      - 0.387
+      - 0.599
+      - 0.382
       entity_id:
-      - light.light_2a1e_light
+      - light.light_1d46_light
       icon: mdi:lightbulb-group
-      friendly_name: Living Room Desk Reading Light
+      friendly_name: Living Room Desk Windowsill Light
       supported_features: 32
       state: 'on'
-  metadata:
-    light.living_room_desk_reading_light:
-      entity_only: true
-- id: '1722032196919'
-  name: 'Reading Light off '
-  entities:
-    light.living_room_desk_reading_light:
+    light.living_room_doorway_windowsill_light:
       min_color_temp_kelvin: 2000
-      max_color_temp_kelvin: 6535
-      min_mireds: 153
+      max_color_temp_kelvin: 5000
+      min_mireds: 200
       max_mireds: 500
       supported_color_modes:
       - color_temp
-      color_mode:
-      brightness:
-      color_temp_kelvin:
-      color_temp:
+      color_mode: color_temp
+      brightness: 3
+      color_temp_kelvin: 2000
+      color_temp: 500
       hs_color:
+      - 30.601
+      - 94.547
       rgb_color:
+      - 255
+      - 136
+      - 13
       xy_color:
+      - 0.599
+      - 0.382
       entity_id:
-      - light.light_2a1e_light
+      - light.light_0b62_light
       icon: mdi:lightbulb-group
-      friendly_name: Living Room Desk Reading Light
+      friendly_name: Living Room Doorway Windowsill Light
       supported_features: 32
-      state: 'off'
+      state: 'on'
   metadata:
-    light.living_room_desk_reading_light:
+    light.living_room_sofa_windowsill_light:
+      entity_only: true
+    light.living_room_desk_windowsill_light:
+      entity_only: true
+    light.living_room_doorway_windowsill_light:
+      entity_only: true
+- id: '1723206317089'
+  name: Living Room 3D printer Light Default
+  entities:
+    light.living_room_3d_printer_light:
+      supported_color_modes:
+      - onoff
+      color_mode: onoff
+      friendly_name: Living Room 3D Printer Light
+      supported_features: 0
+      state: 'on'
+  metadata:
+    light.living_room_3d_printer_light:
+      entity_only: true
+- id: '1723206351468'
+  name: Bedroom Light Default
+  entities:
+    light.bedroom_lights:
+      supported_color_modes:
+      - onoff
+      color_mode: onoff
+      icon: mdi:lightbulb
+      friendly_name: Bedroom Lights
+      supported_features: 0
+      state: 'on'
+  metadata:
+    light.bedroom_lights:
+      entity_only: true
+- id: '1723210711458'
+  name: Living Room Ambient Lights Default
+  entities:
+    light.living_room_ambient_lights:
+      supported_color_modes:
+      - brightness
+      color_mode: brightness
+      brightness: 26
+      entity_id:
+      - light.light_ec96_light
+      icon: mdi:lightbulb-group
+      friendly_name: Living Room Ambient Lights
+      supported_features: 32
+      state: 'on'
+  metadata:
+    light.living_room_ambient_lights:
       entity_only: true
