--- a/include/light/kitchen.yaml
+++ b/include/light/kitchen.yaml
@@ -1,28 +1,5 @@
-- platform: template
-  lights:
-    kitchen_lights:
-      friendly_name: "Kitchen Lights"
-      value_template: "{{ is_state('light.light_b55c_light_1', 'on') }}"
-      availability_template: "{{ not is_state('light.light_b55c_light_1', 'unavailable') }}"
-      level_template: "{{ state_attr('light.light_7a86_light', 'brightness') | int }}"
-      temperature_template: "{{ state_attr('light.light_7a86_light', 'color_temp') | int }}"
-      min_mireds_template: "{{ state_attr('light.light_7a86_light', 'min_mireds') | int }}"
-      max_mireds_template: "{{ state_attr('light.light_7a86_light', 'max_mireds') | int }}"
-      turn_on:
-        service: light.turn_on
-        data:
-          entity_id: light.light_b55c_light_1
-      turn_off:
-        service: light.turn_off
-        data:
-          entity_id: light.light_b55c_light_1
-      set_level:
-        service: light.turn_on
-        data_template:
-          entity_id: light.light_7a86_light
-          brightness: "{{ brightness }}"
-      set_temperature:
-        service: light.turn_on
-        data_template:
-          entity_id: light.light_7a86_light
-          color_temp: "{{ color_temp }}"
+- platform: group
+  unique_id: kitchen_lights
+  name: "Kitchen Lights"
+  entities:
+    - light.light_b55c_light_1
