fix optional daylight sensor blueprint input

--- a/blueprints/automation/occupancy_device.yaml
+++ b/blueprints/automation/occupancy_device.yaml
@@ -65,9 +65,8 @@ variables:
 
 trigger:
   - alias: Any change in daylight
-    platform: state
-    entity_id: !input daylight_sensor
-    enabled: "{{ daylight_sensor != '' }}"
+    platform: template
+    value_template: "{{ daylight_sensor == '' or is_state(daylight_sensor, 'off') }}"
   - alias: Change of occupancy detected to occupancy clear for the specified duration
     platform: state
     entity_id: !input occupancy_sensor
@@ -135,10 +134,8 @@ action:
           - condition: state
             entity_id: !input occupancy_sensor
             state: "on"
-          - condition: state
-            entity_id: !input daylight_sensor
-            state: "off"
-            enabled: "{{ daylight_sensor != '' }}"
+          - condition: template
+            value_template: "{{ daylight_sensor == '' or is_state(daylight_sensor, 'off') }}"
         sequence:
           - action: scene.turn_on
             data: {}
