--- a/scenes.yaml
+++ b/scenes.yaml
@@ -9,7 +9,7 @@
       supported_color_modes:
       - color_temp
       color_mode: color_temp
-      brightness: 102
+      brightness: 63
       color_temp_kelvin: 2500
       color_temp: 400
       hs_color:
@@ -24,7 +24,7 @@
       - 0.389
       entity_id:
       - light.light_2a1e_light
-      icon: mdi:lightbulb-group
+      icon: mdi:desk-lamp
       friendly_name: Living Room Desk Reading Light
       supported_features: 32
       state: 'on'
@@ -32,34 +32,34 @@
     light.living_room_desk_reading_light:
       entity_only: true
 - id: '1723203633955'
-  name: Kitchen Lights Default
+  name: Kitchen Ambient Lights Default
   entities:
-    light.kitchen_lights:
+    light.kitchen_ambient_lights:
       supported_color_modes:
       - onoff
       color_mode: onoff
       entity_id:
       - light.light_b55c_light_1
-      icon: mdi:lightbulb-group
-      friendly_name: Kitchen Lights
+      icon: mdi:ceiling-light-multiple
+      friendly_name: Kitchen Ambient Lights
       supported_features: 0
       state: 'on'
   metadata:
-    light.kitchen_lights:
+    light.kitchen_ambient_lights:
       entity_only: true
 - id: '1723205417936'
-  name: Hallway Lights Default
+  name: Hallway Ambient Lights Default
   entities:
-    light.hallway_lights:
+    light.hallway_ambient_lights:
       supported_color_modes:
       - onoff
       color_mode: onoff
-      icon: mdi:lightbulb
-      friendly_name: Hallway Lights
+      friendly_name: Hallway Ambient Lights
       supported_features: 0
+      icon: mdi:ceiling-light-multiple
       state: 'on'
   metadata:
-    light.hallway_lights:
+    light.hallway_ambient_lights:
       entity_only: true
 - id: '1723206199458'
   name: Living Room Decorative Lights Default
@@ -146,18 +146,18 @@
     light.living_room_3d_printer_light:
       entity_only: true
 - id: '1723206351468'
-  name: Bedroom Light Default
+  name: Bedroom Ambient Lights Default
   entities:
-    light.bedroom_lights:
+    light.bedroom_ambient_lights:
       supported_color_modes:
       - onoff
       color_mode: onoff
-      icon: mdi:lightbulb
-      friendly_name: Bedroom Lights
+      friendly_name: Bedroom Ambient Lights
       supported_features: 0
+      icon: mdi:ceiling-light-multiple
       state: 'on'
   metadata:
-    light.bedroom_lights:
+    light.bedroom_ambient_lights:
       entity_only: true
 - id: '1723210711458'
   name: Living Room Ambient Lights Default
@@ -166,13 +166,99 @@
       supported_color_modes:
       - brightness
       color_mode: brightness
-      brightness: 26
-      entity_id:
-      - light.light_ec96_light
-      icon: mdi:lightbulb-group
+      brightness: 13
       friendly_name: Living Room Ambient Lights
-      supported_features: 32
+      supported_features: 0
+      icon: mdi:ceiling-light-multiple
       state: 'on'
   metadata:
     light.living_room_ambient_lights:
+      entity_only: true
+- id: '1723321675222'
+  name: Bedroom Accent Lights Default
+  entities:
+    light.bedroom_accent_lights:
+      min_color_temp_kelvin: 2127
+      max_color_temp_kelvin: 6535
+      min_mireds: 153
+      max_mireds: 470
+      supported_color_modes:
+      - color_temp
+      - hs
+      - xy
+      color_mode: color_temp
+      brightness: 102
+      color_temp_kelvin: 2358
+      color_temp: 424
+      hs_color:
+      - 29.276
+      - 77.925
+      rgb_color:
+      - 255
+      - 153
+      - 56
+      xy_color:
+      - 0.562
+      - 0.389
+      entity_id:
+      - light.light_09e6_light
+      - light.light_40a4_light
+      icon: mdi:track-light
+      friendly_name: Bedroom Accent Lights
+      supported_features: 32
+      state: 'on'
+  metadata:
+    light.bedroom_accent_lights:
+      entity_only: true
+- id: '1723321782869'
+  name: Kitchen Accent Lights Default
+  entities:
+    light.kitchen_accent_lights:
+      min_color_temp_kelvin: 2127
+      max_color_temp_kelvin: 6535
+      min_mireds: 153
+      max_mireds: 470
+      supported_color_modes:
+      - color_temp
+      - hs
+      - xy
+      icon: mdi:track-light
+      friendly_name: Kitchen Accent Lights
+      supported_features: 32
+      color_mode: color_temp
+      brightness: 153
+      color_temp_kelvin: 2702
+      color_temp: 370
+      hs_color:
+      - 28.391
+      - 65.659
+      rgb_color:
+      - 255
+      - 166
+      - 87
+      xy_color:
+      - 0.526
+      - 0.387
+      entity_id:
+      - light.light_7a86_light
+      state: 'on'
+  metadata:
+    light.kitchen_accent_lights:
+      entity_only: true
+- id: '1723322318888'
+  name: Bedroom Decorative Lights Default
+  entities:
+    light.bedroom_clock_light:
+      supported_color_modes:
+      - brightness
+      color_mode: brightness
+      brightness: 51
+      entity_id:
+      - light.clock_3006_light
+      icon: mdi:lightbulb-group
+      friendly_name: Bedroom Clock Light
+      supported_features: 0
+      state: 'on'
+  metadata:
+    light.bedroom_clock_light:
       entity_only: true
