--- a/include/sensor/bedroom.yaml
+++ b/include/sensor/bedroom.yaml
@@ -42,3 +42,9 @@
   type: mean
   entity_ids:
     - sensor.fan_1d90_nitrogen_dioxide
+- platform: min_max
+  unique_id: bedroom_sound_pressure
+  name: "Bedroom Sound Pressure"
+  type: mean
+  entity_ids:
+    - sensor.clock_3006_sound_pressure
