--- a/automations.yaml
+++ b/automations.yaml
@@ -602,3 +602,41 @@
         hours: 0
         minutes: 0
         seconds: 10
+- id: '1723664686276'
+  alias: Bedroom Accent Lights
+  description: ''
+  trigger:
+  - platform: state
+    entity_id:
+    - light.bedroom_ambient_lights
+    to: 'off'
+    id: 'Lights off '
+  - platform: state
+    entity_id:
+    - light.bedroom_ambient_lights
+    to: 'on'
+    id: Lights on
+  condition: []
+  action:
+  - choose:
+    - conditions:
+      - condition: trigger
+        id:
+        - Lights on
+      sequence:
+      - action: light.turn_on
+        metadata: {}
+        data: {}
+        target:
+          entity_id: light.bedroom_accent_lights
+    - conditions:
+      - condition: trigger
+        id:
+        - 'Lights off '
+      sequence:
+      - action: light.turn_off
+        target:
+          entity_id:
+          - light.bedroom_accent_lights
+        data: {}
+  mode: single
