--- a/include/template/hallway.yaml
+++ b/include/template/hallway.yaml
@@ -2,7 +2,7 @@
     - platform: state
       entity_id: sensor.hallway_illuminance
     - platform: state
-      entity_id: light.hallway_lights
+      entity_id: light.hallway_ambient_lights
       to: "on"
   sensor:
     - unique_id: "hallway_illuminance_lights_off"
@@ -11,20 +11,20 @@
       state_class: measurement
       device_class: illuminance
       state: >
-        {% if is_state('light.hallway_lights', 'on') %}
+        {% if is_state('light.hallway_ambient_lights', 'on') %}
           {{ state_attr('sensor.hallway_illuminance_lights_off', 'last_lights_off_illuminance') }}
         {% else %}
           {{ states('sensor.hallway_illuminance') }}
         {% endif %}
       attributes:
         last_lights_off_illuminance: >
-          {% if is_state('light.hallway_lights', 'off') %}
+          {% if is_state('light.hallway_ambient_lights', 'off') %}
             {{ states('sensor.hallway_illuminance') }}
           {% else %}
             {{ state_attr('sensor.hallway_illuminance_lights_off', 'last_lights_off_illuminance') }}
           {% endif %}
       availability: >
-        {% if is_state('light.hallway_lights', 'on') and state_attr('sensor.hallway_illuminance_lights_off', 'last_lights_off_illuminance') == None %}
+        {% if is_state('light.hallway_ambient_lights', 'on') and state_attr('sensor.hallway_illuminance_lights_off', 'last_lights_off_illuminance') == None %}
           false
         {% else %}
           true
