--- a/automations.yaml
+++ b/automations.yaml
@@ -602,41 +602,39 @@
         hours: 0
         minutes: 0
         seconds: 10
-- id: '1723664686276'
+- id: '1724788305694'
+  alias: Bedroom Ambient Lights
+  description: ''
+  use_blueprint:
+    path: occupancy_device.yaml
+    input:
+      occupancy_sensor: binary_sensor.bedroom_occupancy
+      daylight_sensor: binary_sensor.bedroom_daylight
+      default_scene_occupied: scene.bedroom_light_default
+      temporary_scene_name: bedroom_ambient_lights_temp
+      temporary_scene_expiration_duration:
+        hours: 0
+        minutes: 0
+        seconds: 0
+      off_delay_duration:
+        hours: 0
+        minutes: 2
+        seconds: 0
+- id: '1724791966620'
   alias: Bedroom Accent Lights
   description: ''
-  trigger:
-  - platform: state
-    entity_id:
-    - light.bedroom_ambient_lights
-    to: 'off'
-    id: 'Lights off '
-  - platform: state
-    entity_id:
-    - light.bedroom_ambient_lights
-    to: 'on'
-    id: Lights on
-  condition: []
-  action:
-  - choose:
-    - conditions:
-      - condition: trigger
-        id:
-        - Lights on
-      sequence:
-      - action: light.turn_on
-        metadata: {}
-        data: {}
-        target:
-          entity_id: light.bedroom_accent_lights
-    - conditions:
-      - condition: trigger
-        id:
-        - 'Lights off '
-      sequence:
-      - action: light.turn_off
-        target:
-          entity_id:
-          - light.bedroom_accent_lights
-        data: {}
-  mode: single
+  use_blueprint:
+    path: occupancy_device.yaml
+    input:
+      occupancy_sensor: binary_sensor.bedroom_occupancy
+      daylight_sensor: binary_sensor.bedroom_daylight
+      default_scene_occupied: scene.bedroom_accent_lights_default
+      temporary_scene_name: bedroom_accent_lights_temp
+      off_delay_duration:
+        hours: 0
+        minutes: 2
+        seconds: 0
+      temporary_scene_expiration_duration:
+        hours: 0
+        minutes: 0
+        seconds: 0
